# tribe

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LICENSE-TRIBE-V2  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
images/: generate_diagrams.py
papers/: DATASETS.md  PAPERS.md
papers/paper-01-region-dissociation/: PLAN.md  paper.bib  paper.tex
results/benchmarks/: 001_yeo7_network_ratio_text.md  002_yeo7_network_ratio_audio.md  003_region_persuasion_text.md  004_region_persuasion_audio.md  005_region_persuasion_real_audio_quick.md  006_frequency_response.md  007_mentalmanip_text_final.md  008_semeval_text_final.md  009_path_c_classifier.md  010_path_c_full_semeval.md  011_nlp_baselines.md
tests/: test_benchmarks.py  test_benchmarks_metrics.py  test_benchmarks_runner.py  test_benchmarks_visualize.py  test_cli.py  test_ingestion.py  test_interpretation.py  test_output.py  test_schema.py  test_tribe_v2_rust.py
tests/fixtures/: manipulative_article.txt  mixed_article.txt  neutral_article.txt
tribe/: __init__.py  __main__.py  analyze.py  cli.py  schema.py  server.py
tribe/backends/: __init__.py  base.py  classifier.py  qcri_architecture.py  router.py  tribe_v2.py  tribe_v2_rust.py
tribe/benchmarks/: __init__.py  classifier.py  metrics.py  runner.py  visualize.py
tribe/benchmarks/datasets/: mentalmanip.py  paired.py  qbias.py  semeval.py
tribe/ingestion/: __init__.py  file.py  media.py  url.py
tribe/interpretation/: __init__.py  neural.py  technique.py
tribe/output/: __init__.py  json_output.py  narrative.py
tribe/static/brain/: regions.json
