[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribe-analyze"
version = "0.2.0"
description = "TRIBE v2 on your MacBook — open-source neural content analysis"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Tushar"},
]
keywords = [
    "manipulation", "propaganda", "content-analysis",
    "neuroscience", "tribe-v2", "brain-encoding",
    "mental-health", "media-literacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Neuroscience",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "lxml_html_clean>=0.4",
    "transformers>=4.40",
    "torch>=2.2",
    "nibabel>=5.2",
    "numpy>=1.26",
    "tf-keras>=2.21",
]

[project.optional-dependencies]
tribe-v2 = [
    "tribev2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tribe = "tribe.cli:main"

[project.urls]
Homepage = "https://github.com/iota31/tribe"
Repository = "https://github.com/iota31/tribe"
Documentation = "https://github.com/iota31/tribe#readme"
Issues = "https://github.com/iota31/tribe/issues"

[tool.setuptools.packages.find]
include = ["tribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
