[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribe-analyze"
version = "0.3.0"
description = "TRIBE v2 on your MacBook — open-source neural content analysis"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Tushar"},
]
keywords = [
    "manipulation", "propaganda", "content-analysis",
    "neuroscience", "tribe-v2", "brain-encoding",
    "mental-health", "media-literacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Neuroscience",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "lxml_html_clean>=0.4",
    "torch>=2.2",
    "nibabel>=5.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
tribe-v2 = [
    "tribev2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.4",
]
bench = [
    "scikit-learn>=1.4",
    "scipy>=1.12",
]
all = [
    "tribe-analyze[dev,lint,bench]",
]

[project.scripts]
tribe = "tribe.cli:main"

[project.urls]
Homepage = "https://github.com/iota31/tribe"
Repository = "https://github.com/iota31/tribe"
Documentation = "https://github.com/iota31/tribe#readme"
Issues = "https://github.com/iota31/tribe/issues"

[tool.setuptools.packages.find]
include = ["tribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tribe/server.py" = ["E501"]
"tribe/benchmarks/datasets/paired.py" = ["E501"]
"tests/test_benchmarks*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["tribe"]

[tool.coverage.report]
show_missing = true
skip_empty = true
